# hpm-data

./: .gitignore  Cargo.toml  README.md  d
.github/workflows/: build.yml  nightly.yml
data/chips/: HPM5301.yaml  HPM5321.yaml  HPM5331.yaml  HPM5361.yaml  HPM6220.yaml  HPM6240.yaml  HPM6260.yaml  HPM6264.yaml  HPM6280.yaml  HPM6284.yaml  HPM6320.yaml  HPM6330.yaml  HPM6340.yaml  HPM6350.yaml  HPM6360.yaml  HPM6364.yaml  HPM6420.yaml  HPM6430.yaml  HPM6450.yaml  HPM6454.yaml  HPM64A0.yaml  HPM64G0.yaml  HPM6730.yaml  HPM6750.yaml  HPM6754.yaml  HPM6830.yaml  HPM6850.yaml  HPM6880.yaml  HPM6E50.yaml  HPM6E60.yaml  HPM6E70.yaml  HPM6E80.yaml
data/dma/: HPM5361.yaml
data/dmamux/: HPM5301.yaml  HPM6280.yaml  HPM6360.yaml  HPM6750.yaml  HPM6880.yaml  HPM6E80.yaml
data/family/: COMMON.yaml  HPM5300.yaml  HPM5300_ADC1.yaml  HPM5300_DAC.yaml  HPM5300_GPTMR23.yaml  HPM5300_MCAN.yaml  HPM5300_Motion.yaml  HPM5300_OPAMP.yaml  HPM5300_PLB.yaml  HPM5300_SPI23.yaml  HPM5300_Secure.yaml  HPM5300_UART4567.yaml  HPM6200.yaml  HPM6200_NonBasic.yaml  HPM6300.yaml  HPM6300_ADC23_DAC.yaml  HPM6300_CAN.yaml  HPM6300_FFA.yaml  HPM6300_I2C3.yaml  HPM6300_QEI_HALL.yaml  HPM6300_SPI3.yaml  HPM6300_UART567.yaml  HPM6300_USB_ENET.yaml  HPM6700_6400.yaml  HPM6800.yaml  HPM6800_Adv.yaml  HPM6800_NonBasic.yaml  HPM6E00.yaml  HPM6E00_NonBasic.yaml  HPM6E00_TSW.yaml
data/group/: HPM5300.ocr  HPM6200.ocr  HPM6300.ocr  HPM6700.ocr  HPM6800.ocr
data/interrupts/: HPM5301.yaml  HPM5361.yaml  HPM6280.yaml  HPM6360.yaml  HPM6750.yaml  HPM6830.yaml  HPM6850.yaml  HPM6880.yaml  HPM6E80.yaml
data/pinmux/: HPM5361.json  HPM6284.json  HPM6364.json  HPM6750.json  HPM6880.json  HPM6E80.json  README.md
data/registers/: acmp_common.yaml  acmp_v6e.yaml  adc12_v67.yaml  adc16_v53.yaml  adc16_v63.yaml  adc16_v67.yaml  adc16_v68.yaml  adc16_v6e.yaml  bcfg_v62.yaml  bcfg_v67.yaml  bcfg_v68.yaml  bkey_common.yaml  bmon_common.yaml  bpor_v67.yaml  bpor_v68.yaml  bsec_common.yaml  butn_common.yaml  cam_v67.yaml  cam_v68.yaml  can_v67.yaml  clc_v6e.yaml  conctl_v67.yaml  crc_common.yaml  dac_v53.yaml  dac_v63.yaml  dao_v67.yaml  dao_v68.yaml  ddrctl_v68.yaml  ddrphy_v68.yaml  dma_v53.yaml  dma_v62.yaml  dma_v67.yaml  dma_v6e.yaml  dmamux_common.yaml  enet_v63.yaml  enet_v67.yaml  enet_v68.yaml  esc_v6e.yaml  ewdg_v53.yaml  ewdg_v69.yaml  (+123 more)
data/resource/: HPM5361.c  HPM6280.c  HPM6750.c  README.md
hpm-data-gen/: Cargo.toml
hpm-data-gen/src/: dma.rs  interrupts.rs  iomux.rs  main.rs  pinmux.rs  pins.rs  sysctl.rs  trgmmux.rs
hpm-data-macros/: Cargo.toml
hpm-data-macros/tests/: test_macros.rs
hpm-data-serde/: Cargo.toml
hpm-data-serde/src/: lib.rs
hpm-metapac-gen/: Cargo.toml
hpm-metapac-gen/res/: Cargo.toml  build.rs
hpm-metapac-gen/res/src/: lib.rs  metadata.rs
hpm-metapac-gen/src/: data.rs  lib.rs  main.rs
pinmux_data/: config.json  version
pinmux_data/HPM6360/: LQFP144.json  LQFP80.json
pinmux_data/HPM6750/: BGA289.json
pinmux_data/codelens/: HPM5361.json  HPM6280.json  HPM6360.json
pinmux_data/codelens/gpio/: basegpio.json
pinmux_data/codelens/ioc/: baseioc.json
pinmux_data/codelens/trgm/: basetrgm.json
pinmux_data/soc/: HPM6280.json
pinmux_data/soc/HPM5361/: QFN48.json
pinmux_data/soc/HPM6280/: BGA116.json
soc/: HPM5361.json  HPM6360.json  HPM6750.json
soc/HPM5361/: LQFP100.json  LQFP64.json
soc/HPM6280/: LQFP144.json
soc/HPM6360/: BGA116.json
svd/: HPM5301_svd.xml  HPM5361_svd.xml  HPM6280_svd.xml  HPM6360_svd.xml  HPM64A0_svd.xml  HPM64G0_svd.xml  HPM6750_svd.xml  HPM6830_svd.xml  HPM6850_svd.xml  HPM6880_svd.xml  HPM6E80_svd.xml
(+1 files in other folders)
