[package]
name = "hpm-metapac-gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
regex = "1.7.1"
chiptool = { git = "https://github.com/ch32-rs/chiptool", rev = "305bd6ee3e57009ae93be2c81d6e94b9896a03b1" }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
proc-macro2 = "1.0.52"
hpm-data-macros = { version = "0.1.0", path = "../hpm-data-macros" }
